# crypto-trading-rs

./: .gitignore  Cargo.toml  pyrightconfig.json  requirements.txt
.cursor/agents/: quant-architect.md  quant-perf-optimizer.md  quant-risk-manager.md  quant-synthesizer.md
.cursor/commands/: quant-brainstorm.md  quant-coding.md  quant-refactor.md
.cursor/rules/: api-readme-quality.mdc  auto-commit-push.mdc  bilingual-response.mdc  lecture-ideas-capture.mdc  notebook-comments.mdc  pairs-trading-pipeline.mdc  python-execution-hygiene.mdc  python-rename-strategy.mdc  quant-coding-rules.mdc  quant-commands-guardrails.mdc  quant-refactor-rules.mdc
.cursor/skills/pairs-trading/: SKILL.md
.cursor/skills/pairs-trading/references/: correlation-api.md
config/: default.toml
docs/: architecture.md  lecture-ideas.md  pipeline-backlog.md  wfa-holdout-log.csv  wfa-run-log.csv  wfa-selection-log.csv  wfa-sensitivity-log.csv  wfa-tuning-log.md
notebooks/: 01_realtime_market_data.ipynb  02_multi_exchange_comparison.ipynb  requirements.txt
python/: .env.example  README.md  pyproject.toml
python/pairs_eda/: __init__.py  backtesting.py  correlation.py  display.py  exa_fallback.py  gemini_search.py  rolling_phase2.py  sp500.py  vectorized_backtest.py  visualization.py  yfinance_tools.py
python/tests/: test_backtesting.py  test_correlation.py  test_kalman_drift.py  test_rolling_phase2.py  test_yfinance_tools.py
reference/python_pairstrading/: run_all.sh  run_wfa.py  stock-trading-eda-scheduled_eng.ipynb  vectorized_backtest.py  wfa_dashboard.py
src/: lib.rs  main.rs
src/config/: settings.rs
src/data/: historical.rs  mod.rs  storage.rs  stream.rs
src/execution/: live.rs  mod.rs  simulated.rs
src/monitoring/: mod.rs
src/risk/: mod.rs
src/strategy/: mod.rs  momentum.rs  pairs.rs
