[package]
name = "crypto-trading-rs"
version = "0.1.0"
edition = "2021"
authors = ["danielyouk <daniel@datatrain.education>"]
description = "Rust-based crypto trading automation system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait support
async-trait = "0.1"

# Numeric precision for financial calculations
rust_decimal = { version = "1.36", features = ["serde-with-str"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (rustls only, no openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket (rustls only, no openssl)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Database (local storage, bundled SQLite)
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# --- Enable after: sudo apt install pkg-config libssl-dev ---
# [dependencies.barter]
# version = "0.12"
#
# [dependencies.barter-data]
# version = "0.11"
#
# [dependencies.barter-execution]
# version = "0.7"
#
# [dependencies.barter-instrument]
# version = "0.3"
#
# [dependencies.barter-integration]
# version = "0.10"
#
# [dependencies.ccxt-rust]
# version = "0.1"
# features = ["rest", "websocket", "rustls-tls"]

[dev-dependencies]
tokio-test = "0.4"
